--- a/perfil.html
+++ b/perfil.html
@@ -514,7 +514,8 @@
         <div class="container-meus-projetos">
             <h2 class="title-meus-projetos">Meus Projetos</h2>
             <div class="container-card-tela-perfil">
-                <div class="card-tela-perfil">
+                <!-- PROJETO EXEMPLO -->
+                <!-- <div class="card-tela-perfil">
                     <figure class="figure-card-tela-perfil">
                         <img src="" alt="" class="img-card-tela-perfil">
                         <figcaption>foto de perfil</figcaption>
@@ -539,201 +540,13 @@
                             <button class="btn-ver-mais">Ver Mais</button>
                         </a>
                     </div>
-                </div>
-
-                <div class="card-tela-perfil">
-                    <figure class="figure-card-tela-perfil">
-                        <img src="" alt="" class="img-card-tela-perfil">
-                        <figcaption>foto de perfil</figcaption>
-                    </figure>
-                    <div class="conteudo-card-tela-perfil">
-                        <div class="titulo-descricao-tela-perfil">
-                            <h2 class="title-card-tela-perfil">PD Pet</h2>
-                            <p class="descricao-card-tela-perfil">A PD Pet é um sistema web fictício de venda de
-                                produtos e
-                                serviços para animais.</p>
-                        </div>
-                        <div class="badges-card-projeto">
-                            <img src="./imagens/badges-mobile/SQLite.svg" alt="SQLite">
-                            <img src="./imagens/badges-mobile/Javascript.svg" alt="Javascript">
-                            <img src="./imagens/badges-mobile/MySQL.svg" alt="MySQL">
-                            <img src="./imagens/badges-mobile/CSS.svg" alt="CSS">
-                            <img src="./imagens/badges-mobile/HTML.svg" alt="HTML">
-                            <img src="./imagens/badges-mobile/Python.svg" alt="Python">
-                        </div>
-
-                        <a href="/projeto.html" class="link-ver-mais">
-                            <button class="btn-ver-mais">Ver Mais</button>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="card-tela-perfil">
-                    <figure class="figure-card-tela-perfil">
-                        <img src="" alt="" class="img-card-tela-perfil">
-                        <figcaption>foto de perfil</figcaption>
-                    </figure>
-                    <div class="conteudo-card-tela-perfil">
-                        <div class="titulo-descricao-tela-perfil">
-                            <h2 class="title-card-tela-perfil">PD Pet</h2>
-                            <p class="descricao-card-tela-perfil">A PD Pet é um sistema web fictício de venda de
-                                produtos e
-                                serviços para animais.</p>
-                        </div>
-                        <div class="badges-card-projeto">
-                            <img src="./imagens/badges-mobile/SQLite.svg" alt="SQLite">
-                            <img src="./imagens/badges-mobile/Javascript.svg" alt="Javascript">
-                            <img src="./imagens/badges-mobile/MySQL.svg" alt="MySQL">
-                            <img src="./imagens/badges-mobile/CSS.svg" alt="CSS">
-                            <img src="./imagens/badges-mobile/HTML.svg" alt="HTML">
-                            <img src="./imagens/badges-mobile/Python.svg" alt="Python">
-                        </div>
-
-                        <a href="/projeto.html" class="link-ver-mais">
-                            <button class="btn-ver-mais">Ver Mais</button>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="card-tela-perfil">
-                    <figure class="figure-card-tela-perfil">
-                        <img src="" alt="" class="img-card-tela-perfil">
-                        <figcaption>foto de perfil</figcaption>
-                    </figure>
-                    <div class="conteudo-card-tela-perfil">
-                        <div class="titulo-descricao-tela-perfil">
-                            <h2 class="title-card-tela-perfil">PD Pet</h2>
-                            <p class="descricao-card-tela-perfil">A PD Pet é um sistema web fictício de venda de
-                                produtos e
-                                serviços para animais.</p>
-                        </div>
-                        <div class="badges-card-projeto">
-                            <img src="./imagens/badges-mobile/SQLite.svg" alt="SQLite">
-                            <img src="./imagens/badges-mobile/Javascript.svg" alt="Javascript">
-                            <img src="./imagens/badges-mobile/MySQL.svg" alt="MySQL">
-                            <img src="./imagens/badges-mobile/CSS.svg" alt="CSS">
-                            <img src="./imagens/badges-mobile/HTML.svg" alt="HTML">
-                            <img src="./imagens/badges-mobile/Python.svg" alt="Python">
-                        </div>
-
-                        <a href="/projeto.html" class="link-ver-mais">
-                            <button class="btn-ver-mais">Ver Mais</button>
-                        </a>
-                    </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
         <div class="container-projetos-compartilhados">
             <h2 class="title-projetos-compartilhados">Projetos Compartilhados</h2>
             <div class="container-card-tela-perfil">
-                <div class="card-tela-perfil">
-                    <figure class="figure-card-tela-perfil">
-                        <img src="" alt="" class="img-card-tela-perfil">
-                        <figcaption>foto de perfil</figcaption>
-                    </figure>
-                    <div class="conteudo-card-tela-perfil">
-                        <div class="titulo-descricao-tela-perfil">
-                            <h2 class="title-card-tela-perfil">PD Pet</h2>
-                            <p class="descricao-card-tela-perfil">A PD Pet é um sistema web fictício de venda de
-                                produtos e
-                                serviços para animais.</p>
-                        </div>
-                        <div class="badges-card-projeto">
-                            <img src="./imagens/badges-mobile/SQLite.svg" alt="SQLite">
-                            <img src="./imagens/badges-mobile/Javascript.svg" alt="Javascript">
-                            <img src="./imagens/badges-mobile/MySQL.svg" alt="MySQL">
-                            <img src="./imagens/badges-mobile/CSS.svg" alt="CSS">
-                            <img src="./imagens/badges-mobile/HTML.svg" alt="HTML">
-                            <img src="./imagens/badges-mobile/Python.svg" alt="Python">
-                        </div>
-
-                        <a href="/projeto.html" class="link-ver-mais">
-                            <button class="btn-ver-mais">Ver Mais</button>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="card-tela-perfil">
-                    <figure class="figure-card-tela-perfil">
-                        <img src="" alt="" class="img-card-tela-perfil">
-                        <figcaption>foto de perfil</figcaption>
-                    </figure>
-                    <div class="conteudo-card-tela-perfil">
-                        <div class="titulo-descricao-tela-perfil">
-                            <h2 class="title-card-tela-perfil">PD Pet</h2>
-                            <p class="descricao-card-tela-perfil">A PD Pet é um sistema web fictício de venda de
-                                produtos e
-                                serviços para animais.</p>
-                        </div>
-                        <div class="badges-card-projeto">
-                            <img src="./imagens/badges-mobile/SQLite.svg" alt="SQLite">
-                            <img src="./imagens/badges-mobile/Javascript.svg" alt="Javascript">
-                            <img src="./imagens/badges-mobile/MySQL.svg" alt="MySQL">
-                            <img src="./imagens/badges-mobile/CSS.svg" alt="CSS">
-                            <img src="./imagens/badges-mobile/HTML.svg" alt="HTML">
-                            <img src="./imagens/badges-mobile/Python.svg" alt="Python">
-                        </div>
-
-                        <a href="/projeto.html" class="link-ver-mais">
-                            <button class="btn-ver-mais">Ver Mais</button>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="card-tela-perfil">
-                    <figure class="figure-card-tela-perfil">
-                        <img src="" alt="" class="img-card-tela-perfil">
-                        <figcaption>foto de perfil</figcaption>
-                    </figure>
-                    <div class="conteudo-card-tela-perfil">
-                        <div class="titulo-descricao-tela-perfil">
-                            <h2 class="title-card-tela-perfil">PD Pet</h2>
-                            <p class="descricao-card-tela-perfil">A PD Pet é um sistema web fictício de venda de
-                                produtos e
-                                serviços para animais.</p>
-                        </div>
-                        <div class="badges-card-projeto">
-                            <img src="./imagens/badges-mobile/SQLite.svg" alt="SQLite">
-                            <img src="./imagens/badges-mobile/Javascript.svg" alt="Javascript">
-                            <img src="./imagens/badges-mobile/MySQL.svg" alt="MySQL">
-                            <img src="./imagens/badges-mobile/CSS.svg" alt="CSS">
-                            <img src="./imagens/badges-mobile/HTML.svg" alt="HTML">
-                            <img src="./imagens/badges-mobile/Python.svg" alt="Python">
-                        </div>
-
-                        <a href="/projeto.html" class="link-ver-mais">
-                            <button class="btn-ver-mais">Ver Mais</button>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="card-tela-perfil">
-                    <figure class="figure-card-tela-perfil">
-                        <img src="" alt="" class="img-card-tela-perfil">
-                        <figcaption>foto de perfil</figcaption>
-                    </figure>
-                    <div class="conteudo-card-tela-perfil">
-                        <div class="titulo-descricao-tela-perfil">
-                            <h2 class="title-card-tela-perfil">PD Pet</h2>
-                            <p class="descricao-card-tela-perfil">A PD Pet é um sistema web fictício de venda de
-                                produtos e
-                                serviços para animais.</p>
-                        </div>
-                        <div class="badges-card-projeto">
-                            <img src="./imagens/badges-mobile/SQLite.svg" alt="SQLite">
-                            <img src="./imagens/badges-mobile/Javascript.svg" alt="Javascript">
-                            <img src="./imagens/badges-mobile/MySQL.svg" alt="MySQL">
-                            <img src="./imagens/badges-mobile/CSS.svg" alt="CSS">
-                            <img src="./imagens/badges-mobile/HTML.svg" alt="HTML">
-                            <img src="./imagens/badges-mobile/Python.svg" alt="Python">
-                        </div>
-
-                        <a href="/projeto.html" class="link-ver-mais">
-                            <button class="btn-ver-mais">Ver Mais</button>
-                        </a>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
